# solscript

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md
.github/workflows/: ci.yml
crates/solscript-ast/: Cargo.toml
crates/solscript-ast/src/: lib.rs  span.rs  types.rs
crates/solscript-bpf/: Cargo.toml
crates/solscript-bpf/src/: codegen.rs  intrinsics.rs  lib.rs  types.rs
crates/solscript-cli/: Cargo.toml
crates/solscript-cli/src/: config.rs  main.rs  package.rs
crates/solscript-cli/src/templates/: embedded.rs  mod.rs  registry.rs
crates/solscript-cli/templates/counter/: README.md.template  main.sol
crates/solscript-cli/templates/escrow/: README.md.template  main.sol
crates/solscript-cli/templates/nft/: README.md.template  main.sol  solscript.toml.template
crates/solscript-cli/templates/simple/: README.md.template  main.sol
crates/solscript-cli/templates/token/: README.md.template  main.sol  solscript.toml.template
crates/solscript-cli/templates/voting/: README.md.template  main.sol
crates/solscript-codegen/: Cargo.toml
crates/solscript-codegen/src/: error.rs  idl_gen.rs  ir.rs  lib.rs  rust_gen.rs  test_gen.rs  ts_gen.rs
crates/solscript-lsp/: Cargo.toml
crates/solscript-lsp/src/: completion.rs  definition.rs  diagnostics.rs  document.rs  hover.rs  lib.rs  main.rs
crates/solscript-parser/: Cargo.toml
crates/solscript-parser/src/: error.rs  lib.rs  parser.rs
crates/solscript-typeck/: Cargo.toml
crates/solscript-typeck/src/: checker.rs  error.rs  lib.rs  scope.rs  types.rs
docs/: README.md  design-decisions.md  inconsistencies.md  roadmap.md  specs.md
documentation/: mkdocs.yml
documentation/docs/: index.md
documentation/docs/examples/: counter.md  token.md  voting.md
documentation/docs/guide/: contracts.md  control-flow.md  events-errors.md  first-contract.md  functions.md  inheritance.md  installation.md  interfaces.md  modifiers.md  overview.md  quickstart.md  solana-concepts.md  state.md  templates.md  types.md
documentation/docs/ide/: lsp.md  vscode.md
documentation/docs/reference/: attributes.md  builtins.md  cli.md  grammar.md  roadmap.md  types.md
documentation/docs/tutorials/: escrow.md  nft-marketplace.md  token.md
examples/: README.md  counter.sol  token.sol
examples/amm/: README.md  amm.sol  solscript.toml
examples/counter/: solscript.toml
examples/escrow/: escrow.sol  solscript.toml
examples/hello-world/: README.md  hello.sol  solscript.toml
examples/multisig/: README.md  multisig.sol  solscript.toml
examples/nft/: nft.sol  solscript.toml
examples/simple/: README.md  simple.sol  solscript.toml
examples/staking/: README.md  solscript.toml  staking.sol
examples/storage/: README.md  solscript.toml  storage.sol
examples/token/: solscript.toml  token.sol
examples/voting/: solscript.toml  voting.sol
grammar/: solscript.pest
vscode-extension/: README.md  language-configuration.json  package.json  tsconfig.json
vscode-extension/snippets/: solscript.json
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: solscript.tmLanguage.json
