[workspace]
resolver = "2"
members = [
    "crates/solscript-ast",
    "crates/solscript-parser",
    "crates/solscript-typeck",
    "crates/solscript-codegen",
    "crates/solscript-cli",
    "crates/solscript-lsp",
    "crates/solscript-bpf",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/solscript/solscript"
rust-version = "1.75"

[workspace.dependencies]
# Internal crates
solscript-ast = { version = "0.1.0", path = "crates/solscript-ast" }
solscript-parser = { version = "0.1.0", path = "crates/solscript-parser" }
solscript-typeck = { version = "0.1.0", path = "crates/solscript-typeck" }
solscript-codegen = { version = "0.1.0", path = "crates/solscript-codegen" }
solscript-bpf = { version = "0.1.0", path = "crates/solscript-bpf" }

# Parsing
pest = "2.7"
pest_derive = "2.7"

# Error handling
thiserror = "1.0"
miette = { version = "7.0", features = ["fancy"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Utilities
indexmap = "2.0"
smol_str = { version = "0.2", features = ["serde"] }
logos = "0.14"

# Testing
pretty_assertions = "1.4"
insta = "1.34"
