[package]
name = "solscript-cli"
description = "CLI for SolScript - compile Solidity-style contracts to Solana"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[[bin]]
name = "solscript"
path = "src/main.rs"

[dependencies]
solscript-ast = { workspace = true }
solscript-parser = { workspace = true }
solscript-typeck = { workspace = true }
solscript-codegen = { workspace = true }
solscript-bpf = { workspace = true }
clap = { workspace = true }
miette = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
notify = "6.1"
notify-debouncer-mini = "0.4"
