[package]
name = "solscript-codegen"
description = "Rust/Anchor code generator for SolScript"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
solscript-ast = { workspace = true }
thiserror = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
solscript-parser = { workspace = true }
solscript-typeck = { workspace = true }
