[package]
name = "solscript-lsp"
version = "0.1.0"
edition = "2021"
description = "Language Server Protocol implementation for SolScript"
license = "MIT OR Apache-2.0"

[dependencies]
solscript-ast = { workspace = true }
solscript-parser = { workspace = true }
solscript-typeck = { workspace = true }

tower-lsp = "0.20"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
dashmap = "5.5"
ropey = "1.6"

[lib]
name = "solscript_lsp"
path = "src/lib.rs"

[[bin]]
name = "solscript-lsp"
path = "src/main.rs"
