[package]
name = "solscript-lsp"
description = "Language Server Protocol implementation for SolScript"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
solscript-ast = { workspace = true }
solscript-parser = { workspace = true }
solscript-typeck = { workspace = true }

tower-lsp = "0.20"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
dashmap = "5.5"
ropey = "1.6"

[lib]
name = "solscript_lsp"
path = "src/lib.rs"

[[bin]]
name = "solscript-lsp"
path = "src/main.rs"
