[package]
name = "solscript-parser"
description = "Parser for SolScript - Solidity-style language for Solana"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
solscript-ast = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
smol_str = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
insta = { workspace = true }
