[package]
name = "solscript-typeck"
description = "Type checker and semantic analysis for SolScript"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
solscript-ast = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
indexmap = { workspace = true }
smol_str = { workspace = true }

[dev-dependencies]
solscript-parser = { workspace = true }
